--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,335 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CommServer</title>
+  <title>CommServer - 登录注册</title>
+  <style>
+    /* 全局样式 */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
+    }
+
+    body {
+      /* background-color: #f0f2f5; */
+      background-image: url("https://api.likepoems.com/img/bing");
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    /* 容器 */
+    .container {
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 16px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 400px;
+      padding: 24px;
+    }
+
+    /* 标题 */
+    h1 {
+      color: #333;
+      margin-bottom: 24px;
+      font-size: 24px;
+      text-align: center;
+    }
+
+    /* 表单 */
+    .form {
+      display: flex;
+      flex-direction: column;
+    }
+
+    /* 输入框组 */
+    .input-group {
+      margin-bottom: 16px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 8px;
+      color: #555;
+      font-size: 14px;
+    }
+
+    input {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #d9d9d9;
+      border-radius: 4px;
+      font-size: 14px;
+      transition: border-color 0.3s;
+    }
+
+    input:focus {
+      outline: none;
+      border-color: #1890ff;
+      box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
+    }
+
+    /* 按钮 */
+    button {
+      padding: 12px;
+      border: none;
+      border-radius: 4px;
+      font-size: 14px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .primary-btn {
+      background-color: #1890ff;
+      color: white;
+      margin-bottom: 12px;
+    }
+
+    .primary-btn:hover {
+      background-color: #40a9ff;
+    }
+
+    .secondary-btn {
+      background-color: #f0f0f0;
+      color: #333;
+    }
+
+    .secondary-btn:hover {
+      background-color: #e0e0e0;
+    }
+
+    /* 分割线 */
+    .divider {
+      text-align: center;
+      margin: 20px 0;
+      color: #999;
+      font-size: 12px;
+    }
+
+    /* 切换按钮 */
+    .toggle-btn {
+      background: none;
+      border: none;
+      color: #1890ff;
+      cursor: pointer;
+      font-size: 14px;
+      text-align: center;
+      margin-top: 12px;
+    }
+
+    .toggle-btn:hover {
+      text-decoration: underline;
+    }
+
+    /* 消息提示 */
+    .message {
+      margin-bottom: 16px;
+      padding: 12px;
+      border-radius: 4px;
+      font-size: 14px;
+    }
+
+    .success-message {
+      background-color: #f6ffed;
+      border: 1px solid #b7eb8f;
+      color: #52c41a;
+    }
+
+    .error-message {
+      background-color: #fff2f0;
+      border: 1px solid #ffccc7;
+      color: #f5222d;
+    }
+
+    /* 隐藏 */
+    .hidden {
+      display: none;
+    }
+  </style>
 </head>
+
 <body>
-  <h1>CommServer</h1>
+  <div class="container">
+    <h1>CommServer</h1>
+
+    <!-- 登录表单 -->
+    <div id="login-form" class="form">
+      <div id="login-message"></div>
+
+      <div class="input-group">
+        <label for="login-username">用户名</label>
+        <input type="text" id="login-username" placeholder="请输入用户名" required>
+      </div>
+
+      <div class="input-group">
+        <label for="login-password">密码</label>
+        <input type="password" id="login-password" placeholder="请输入密码" required>
+      </div>
+
+      <button class="primary-btn" onclick="handleLogin()">登录</button>
+
+      <!-- <div class="divider">或</div> -->
+
+      <button class="secondary-btn" onclick="toggleToRegister()">创建新账号</button>
+    </div>
+
+    <!-- 注册表单 -->
+    <div id="register-form" class="form hidden">
+      <div id="register-message"></div>
+
+      <div class="input-group">
+        <label for="register-username">用户名</label>
+        <input type="text" id="register-username" placeholder="请输入用户名" required>
+      </div>
+
+      <div class="input-group">
+        <label for="register-email">邮箱</label>
+        <input type="email" id="register-email" placeholder="请输入邮箱" required>
+      </div>
+
+      <div class="input-group">
+        <label for="register-password">密码</label>
+        <input type="password" id="register-password" placeholder="请输入密码" required>
+      </div>
+
+      <div class="input-group">
+        <label for="register-confirm-password">确认密码</label>
+        <input type="password" id="register-confirm-password" placeholder="请确认密码" required>
+      </div>
+
+      <button class="primary-btn" onclick="handleRegister()">注册</button>
+
+      <!-- <div class="divider">或</div> -->
+
+      <button class="secondary-btn" onclick="toggleToLogin()">已有账号？登录</button>
+    </div>
+  </div>
+
+  <script>
+    // 显示登录表单，隐藏注册表单
+    function toggleToLogin() {
+      document.getElementById('register-form').classList.add('hidden');
+      document.getElementById('login-form').classList.remove('hidden');
+      document.getElementById('register-message').innerHTML = '';
+    }
+
+    // 显示注册表单，隐藏登录表单
+    function toggleToRegister() {
+      document.getElementById('login-form').classList.add('hidden');
+      document.getElementById('register-form').classList.remove('hidden');
+      document.getElementById('login-message').innerHTML = '';
+    }
+
+    // 显示消息
+    function showMessage(containerId, message, isError) {
+      const container = document.getElementById(containerId);
+      const messageClass = isError ? 'error-message' : 'success-message';
+      container.innerHTML = `<div class="message ${messageClass}">${message}</div>`;
+    }
+
+    // 登录处理
+    function handleLogin() {
+      const username = document.getElementById('login-username').value;     // 实际登录请求逻辑
+      const password = document.getElementById('login-password').value;
+      const loginData = {
+        username: username,
+        password: password,
+        remember: false
+      };
+
+      fetch('/api/auth/login', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(loginData)
+      }).then(response => {
+        return response.json();
+      }).then(data => {
+        console.log('请求成功:', data);
+        // 登录成功，跳转或其他逻辑
+        if (data.success) {
+          showMessage('login-message', '登录成功！', false);
+        } else {
+          showMessage('login-message', data.message || '用户名或密码错误', true);
+        }
+
+      }).catch(error => {
+        console.error('登录失败:', error);
+        showMessage('login-message', '登录失败', true);
+      });
+
+    }
+
+    // 注册处理
+    function handleRegister() {
+      const username = document.getElementById('register-username').value.trim();
+      const email = document.getElementById('register-email').value.trim();
+      const password = document.getElementById('register-password').value;
+      const confirmPassword = document.getElementById('register-confirm-password').value;
+
+      // 验证输入
+      if (!username || !email || !password || !confirmPassword) {
+        showMessage('register-message', '请填写所有字段', true);
+        return;
+      }
+
+      if (password !== confirmPassword) {
+        showMessage('register-message', '两次密码输入不一致', true);
+        return;
+      }
+
+      if (password.length < 6) {
+        showMessage('register-message', '密码长度不能少于6位', true);
+        return;
+      }
+
+      const registerData = {
+        username: username,
+        email: email,
+        password: password,
+        confirm_password: confirmPassword
+      };
+
+      fetch('/api/auth/register', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(registerData)
+      }).then(response => {
+        return response.json();
+      }).then(data => {
+        console.log('请求成功:', data);
+        if (!data.success) {
+          showMessage('register-message', data.message || '注册失败', true);
+          return;
+        }
+
+        // 注册成功，显示消息
+        showMessage('register-message', data.message || '注册成功', false);
+
+        // 3秒后自动切换到登录表单
+        setTimeout(() => {
+          toggleToLogin();
+          // 自动填充用户名
+          document.getElementById('login-username').value = username;
+          // 清空密码框
+          document.getElementById('login-password').value = '';
+        }, 3000);
+
+      }).catch(error => {
+        console.error('注册失败:', error);
+        showMessage('register-message', '注册失败', true);
+      });
+
+    }
+  </script>
 </body>
+
 </html>
